Fixed collapsed navbar dropdown
Fixed collapsed navbar dropdown menu being underneath scrolling content

--- a/css/biginstitute.css
+++ b/css/biginstitute.css
@@ -52,6 +52,7 @@ body {
 	-moz-border-radius: 0;
 	border-radius: 0;
 	border: none;
+	z-index: 100000;
 }
 
 .nav-wrapper {
